<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.darwin.umnify.personal.EvaluationActivity"
    android:orientation="vertical"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:contentInsetLeft="0dp"
            android:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetEnd="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetEnd="0dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/toolbar_back_icon"
                    android:background="@drawable/toolbar_button_colors"
                    android:scaleType="fitXY"
                    android:id="@+id/back"
                    android:layout_alignParentLeft="true"
                    android:adjustViewBounds="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:text="Poseidon Alert"/>
            </LinearLayout>



        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"

        >
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"

        >
        <TextView
            android:textColor="#000000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_column="1"
            android:text="Type"/>
        <TextView
            android:textColor="#000000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"

            android:layout_weight="1"
            android:layout_column="2"
            android:text="Description"/>
        <TextView
            android:textColor="#000000"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_column="3"
            android:text="Action"/>
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C30606"
        >
        <TextView
            android:textColor="#FFFFFF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"

            android:layout_column="1"
            android:text="@string/poseidon_red_alert"/>
        <TextView
            android:textColor="#FFFFFF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"

            android:layout_weight="1"
            android:layout_column="2"
            android:text="@string/poseidon_red_alert_description"/>
        <TextView

            android:layout_width="0dp"
            android:textColor="#FFFFFF"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_column="3"
            android:text="@string/poseidon_red_alert_action"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5032A6"
        >
        <TextView
            android:textColor="#FFFFFF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"

            android:layout_column="1"
            android:text="@string/poseidon_blue_alert"/>
        <TextView
            android:textColor="#FFFFFF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"

            android:layout_weight="1"
            android:layout_column="2"
            android:text="@string/poseidon_blue_alert_description"/>
        <TextView

            android:layout_width="0dp"
            android:textColor="#FFFFFF"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_column="3"
            android:text="@string/poseidon_blue_alert_action"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FDF807"
        >
        <TextView
            android:textColor="#FFFFFF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"

            android:layout_column="1"
            android:text="@string/poseidon_yellow_alert"/>
        <TextView
            android:textColor="#FFFFFF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"

            android:layout_weight="1"
            android:layout_column="2"
            android:text="@string/poseidon_yellow_alert_description"/>
        <TextView
            android:textColor="#FFFFFF"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_column="3"
            android:text="@string/poseidon_yellow_alert_action"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FA760D"
        >
        <TextView
            android:textColor="#FFFFFF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"

            android:layout_column="1"
            android:text="@string/poseidon_orange_alert"/>
        <TextView
            android:textColor="#FFFFFF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"

            android:layout_weight="1"
            android:layout_column="2"
            android:text="@string/poseidon_orange_alert_description"/>
        <TextView
            android:textColor="#FFFFFF"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_column="3"
            android:text="@string/poseidon_orange_alert_action"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#09C205"
        >
        <TextView
            android:textColor="#FFFFFF"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"

            android:layout_column="1"
            android:text="@string/poseidon_green_alert"/>
        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:layout_column="2"
            android:text="@string/poseidon_green_alert_description"/>
        <TextView

            android:layout_width="0dp"
            android:textColor="#FFFFFF"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_column="3"
            android:text="@string/poseidon_green_alert_action"/>
    </TableRow>
</TableLayout>
</ScrollView>
    </LinearLayout>